--- a/pangu-website/app/常见问答.md
+++ b/pangu-website/app/常见问答.md
@@ -1,8 +1,8 @@
 ---
-title: 日常开发常见问答
+title: 常见问答
 tags: [FAQ]
 hide_table_of_contents: true
-sidebar_position: 10
+sidebar_position: 15
 slug: /faq
 ---
 <head>
