--- a/pangu-website/docs/advanced-guide/分布式锁.md
+++ b/pangu-website/docs/advanced-guide/分布式锁.md
@@ -17,18 +17,20 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古模块
 
 <Tabs>
-<TabItem value="parent" label="盘古 Parent">
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
@@ -37,15 +39,17 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="缓存模块">
+
+<TabItem value="dependency2" label="其它">
 
 ```jsx
 <dependency>
-	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-cache-spring-boot-starter</artifactId>
+    <groupId>com.baomidou</groupId>
+    <artifactId>lock4j-redis-template-spring-boot-starter</artifactId>
 </dependency>
 ```
 </TabItem>
+
 </Tabs>
 
 ## 本地配置
