--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -66,23 +66,39 @@ Nacos 的客户端 SDK 会在本地生成配置的快照。当客户端无法连
 ### 安装相关盘古模块
 
 <Tabs>
-<TabItem value="parent" label="盘古 Parent">
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
     <groupId>com.gitee.pulanos.pangu</groupId>
     <artifactId>pangu-spring-boot-starter</artifactId>
+</dependency>
+```
+</TabItem>
+
+<TabItem value="dependency2" label="其它">
+
+```jsx
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+<dependency>
+    <groupId>com.alibaba.boot</groupId>
+    <artifactId>nacos-config-spring-boot-starter</artifactId>
 </dependency>
 ```
 </TabItem>
