--- a/pangu-website/docs/quick-start/如何开发单体应用.md
+++ b/pangu-website/docs/quick-start/如何开发单体应用.md
@@ -20,18 +20,20 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古模块
 
 <Tabs defaultValue="dependency2">
-<TabItem value="parent" label="盘古 Parent">
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
@@ -40,12 +42,13 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="Web模块">
+
+<TabItem value="dependency2" label="其它">
 
 ```jsx
 <dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-web-spring-boot-starter</artifactId>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
 </dependency>
 ```
 </TabItem>
