--- a/pangu-website/docs/quick-start/如何开发微服务应用.md
+++ b/pangu-website/docs/quick-start/如何开发微服务应用.md
@@ -18,18 +18,20 @@ import TabItem from '@theme/TabItem';
 ### 安装相关盘古模块
 
 <Tabs>
-<TabItem value="parent" label="盘古 Parent">
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
@@ -38,15 +40,7 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="Dubbo 模块">
 
-```jsx
-<dependency>
-	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-dubbo-spring-boot-starter</artifactId>
-</dependency>
-```
-</TabItem>
 <TabItem value="dependency3" label="服务接口包">
 
 ```jsx
@@ -56,13 +50,31 @@ import TabItem from '@theme/TabItem';
     <version>1.0.0</version>
 </dependency>
 ```
+</TabItem>
 
-:::caution
-盘古框架微服务交互基于 Dubbo 提供的面向接口代理的高性能 RPC 调用能力。所以，对于内部服务模块之间的交互调用都需要依赖服务接口包。
-:::
+<TabItem value="dependency2" label="其它 模块">
 
+```jsx
+<dependency>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+<dependency>
+	<groupId>com.alibaba.boot</groupId>
+	<artifactId>nacos-config-spring-boot-starter</artifactId>
+</dependency>
+<dependency>
+	<groupId>org.apache.dubbo</groupId>
+	<artifactId>dubbo-spring-boot-starter</artifactId>
+</dependency>
+<dependency>
+	<groupId>org.apache.dubbo</groupId>
+	<artifactId>dubbo-registry-nacos</artifactId>
+</dependency>
+```
 </TabItem>
 </Tabs>
+
 
 ### 本地配置
 
