--- a/pangu-website/admin/quick-start/搭建后端开发环境.md
+++ b/pangu-website/admin/quick-start/搭建后端开发环境.md
@@ -16,78 +16,120 @@ import TabItem from '@theme/TabItem';
 ## 工程结构说明
 盘古 Admin 后端仓库代码路径：`pangu-framework/pangu-admin/pangu-admin-backend`。
 - pangu-admin-web：统一网关
-- pangu-admin-system：权限模块
-  - pangu-admin-system-api：权限模块服务接口
-  - pangu-admin-system-app：权限模块服务实现
+- pangu-admin-system-api：权限模块服务接口
+- pangu-admin-system：权限模块服务实现
 
 ## 开发环境搭建
 
 - 将后端工程引入 IDEA。工程代码：pangu-framework/pangu-admin/pangu-admin-backend。
-- 执行目录 ~/pangu-admin-system/pangu-admin-system-app/src/main/resources/sql 中的数据脚本。
+- 执行目录 ~/pangu-admin-system/pangu-admin-system/src/main/resources/sql 中的数据脚本。
 
 ### 配置
-分别在 nacos 配置中心创建模块`pangu-admin-web`和`pangu-admin-system-app`的配置信息。如下图所示。
+分别在 nacos 配置中心创建模块`pangu-admin-web.yaml`和`pangu-admin-system.yaml`的配置信息。如下图所示。
 
 ![盘古开发框架 Admin](/resources/doc/35-pangu-admin.png)
 
 > 关于 naocs 配置中心的相关用法请查阅开发指南章节的 [配置中心](/docs/advanced-guide/nacos-config-center)。
 
 <Tabs>
-<TabItem value="pangu-admin-web" label="pangu-admin-web">
+<TabItem value="pangu-admin-web" label="pangu-admin-web.yaml">
 
-```jsx title="Data Id 为 ppangu-admin-web 的配置数据"
-spring.jackson.time-zone=GMT+8
-pangu.web.cross-origin=true
+```jsx title="Data Id 为 ppangu-admin-web.yaml 的配置数据"
+server:
+  port: 8080
+  
+dubbo:
+  protocol:
+    name: tri
+    port: -1
+    # 为了解决复杂对象序列化问题，缺省估计是使用fastjson2序列化导致的问题
+    serialization: hessian2
+  consumer:
+    timeout: 5000
+    check: false
+  registry: 
+    address: nacos://${nacos.server-addr}?namespace=${nacos.namespace}
+    username: ${nacos.username:nacos}
+    password: ${nacos.password:nacos}
+  application:
+    qos-port: 22223
+    serialize-check-status: WARN
 
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=-1
-dubbo.consumer.timeout=5000
-dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
-dubbo.consumer.check=false
+app:
+  jwt:
+    secret-key: alliswell666
+    ttl-min: 480
+    persistent: true
+  log:
+    queue:
+      producer:
+        disabled: false
+      consumer:
+        pool:
+          threads: 10
 
-app.jwt.secret-key=alliswell666
-app.jwt.ttl-min=480
-app.jwt.persistent=true
-
-app.log.queue.producer.disabled=false
-#app.log.queue.producer.excludes.method-start-with=list,find,select,query,read
-app.log.queue.consumer.pool.threads=10
-
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-logging.level.com.alibaba.nacos.client.config.impl.ClientWorker=WARN
-logging.level.com.yomahub.tlog.dubbo.filter=ERROR
+logging:
+  level:
+    root: INFO
+    com.gitee.pulanos.pangu: INFO
+  file:
+    name: logs/pangu.log
 ```
 
 </TabItem>
 
-<TabItem value="pangu-admin-system-app" label="pangu-admin-system-app">
+<TabItem value="pangu-admin-system-app" label="pangu-admin-system-app.yaml">
 
-```jsx title="Data Id 为 pangu-admin-system-app 的配置数据"
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=-1
-dubbo.consumer.timeout=5000
-dubbo.registry.address=nacos://${nacos.server-addr}?namespace=${nacos.namespace}
-dubbo.consumer.check=false
-dubbo.provider.filter=-exception
+```jsx title="Data Id 为 pangu-admin-system-app.yaml 的配置数据"
+server:
+  port: 9090
+  
+dubbo:
+  protocol:
+    name: tri
+    port: -1
+    # 为了解决复杂对象序列化问题，缺省估计是使用fastjson2序列化导致的问题
+    serialization: hessian2
+  consumer:
+    timeout: 5000
+    check: false
+  registry: 
+    address: nacos://${nacos.server-addr}?namespace=${nacos.namespace}
+    username: ${nacos.username:nacos}
+    password: ${nacos.password:nacos}
+  application:
+    qos-port: 22222
+    serialize-check-status: WARN
 
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pangu-admin?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
-spring.datasource.username=root
-spring.datasource.password=root123456
+spring:
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://1.14.xx.xx:3306/pangu-admin?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&rewriteBatchedStatements=true
+    username: root
+    password: root
 
-mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
-mybatis-plus.global-config.db-config.logic-delete-field=deleted
-mybatis-plus.global-config.db-config.logic-not-delete-value=0
-mybatis-plus.global-config.db-config.logic-delete-value=id
-pangu.jdbc.db-type=mysql
+mybatis-plus:
+  mapperLocations: classpath*:/mapper/**/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-not-delete-value: 0
+      logic-delete-value: id
 
-logging.file.name=logs/pangu.log
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-logging.level.com.pulanit.pangu.admin.system.dao=DEBUG
+pangu:
+  mybatis-plus:
+    db-type: mysql
+
+logging:
+  level:
+    root: INFO
+    com.gitee.pulanos.pangu: INFO
+    com.pulanit.pangu.admin.system.dao: DEBUG
+  file:
+    name: logs/pangu.log
 ```
 </TabItem>
 </Tabs>
@@ -100,7 +142,7 @@ logging.level.com.pulanit.pangu.admin.system.dao=DEBUG
 
 **启动权限服务模块**
 ```jsx title="启动参数"
--Dnacos.server-addr=100.100.100.XXX:8048 -Dnacos.namespace=pangu-dev
+-Dspring.active=dev -Dnacos.server-addr=1.140.170.xxx:xxxx -Dnacos.namespace=dev -Dnacos.password=xxx
 ```
 启动成功后在 nacos 服务列表中可看到相关服务提供者信息。如下图所示。
 
@@ -108,7 +150,7 @@ logging.level.com.pulanit.pangu.admin.system.dao=DEBUG
 
 **启动网关模块**
 ```jsx title="启动参数"
--Dnacos.server-addr=100.100.100.XXX:8048 -Dnacos.namespace=pangu-dev
+-Dspring.active=dev -Dnacos.server-addr=1.140.170.xxx:xxxx -Dnacos.namespace=dev -Dnacos.password=xxx
 ```
 启动成功后在 nacos 服务列表中可看到相关服务消费者信息。如下图所示。
 
