--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -25,18 +25,20 @@ import TabItem from '@theme/TabItem';
 ## 安装相关盘古模块
 
 <Tabs>
-<TabItem value="parent" label="盘古 Parent">
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
@@ -45,15 +47,21 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="缓存模块">
+
+<TabItem value="dependency2" label="其它">
 
 ```jsx
 <dependency>
-	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-cache-spring-boot-starter</artifactId>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-redis</artifactId>
+</dependency>
+<dependency>
+	<groupId>com.github.xiaolyuh</groupId>
+	<artifactId>layering-cache-starter</artifactId>
 </dependency>
 ```
 </TabItem>
+
 </Tabs>
 
 ## 本地配置
