--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -16,19 +16,21 @@ import TabItem from '@theme/TabItem';
 
 ## 安装相关盘古模块
 
-<Tabs defaultValue="dependency2">
-<TabItem value="parent" label="盘古 Parent">
+<Tabs>
+<TabItem value="parent" label="盘古依赖管理">
 
 ```jsx
-<parent>
+<dependency>
 	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
+	<artifactId>pangu-dependencies</artifactId>
 	<version>latest.version.xxx</version>
-	<relativePath/>
-</parent>
+	<type>pom</type>
+	<scope>import</scope>
+</dependency>
 ```
 </TabItem>
-<TabItem value="dependency1" label="基础模块">
+
+<TabItem value="dependency1" label="盘古 Starter">
 
 ```jsx
 <dependency>
@@ -37,15 +39,18 @@ import TabItem from '@theme/TabItem';
 </dependency>
 ```
 </TabItem>
-<TabItem value="dependency2" label="消息队列模块">
+
+<TabItem value="dependency2" label="其它">
 
 ```jsx
 <dependency>
-	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-rabbitmq-spring-boot-starter</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-amqp</artifactId>
 </dependency>
+
 ```
 </TabItem>
+
 </Tabs>
 
 ## 队列规划
