--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -1,7 +1,7 @@
 ---
 title: 安装
 tags: [盘古简介,盘古架构]
-sidebar_position: 2
+sidebar_position: 20
 slug: /install
 ---
 <head>
@@ -21,12 +21,17 @@ import TabItem from '@theme/TabItem';
 <TabItem value="maven" label="Maven坐标">
 
 ```jsx
-<parent>
-	<groupId>com.gitee.pulanos.pangu</groupId>
-	<artifactId>pangu-parent</artifactId>
-	<version>${最新稳定版本}</version>
-	<relativePath/>
-</parent>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.gitee.pulanos.pangu</groupId>
+                <artifactId>pangu-dependencies</artifactId>
+                <version>${最新稳定版本}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 ```
 
 </TabItem>
@@ -34,12 +39,12 @@ import TabItem from '@theme/TabItem';
 <TabItem value="Gradle" label="Gradle DSL">
 
 ```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-parent:${最新稳定版本}'
+implementation 'com.gitee.pulanos.pangu:pangu-dependencies:${最新稳定版本}'
 ```
 </TabItem>
 </Tabs>
 
-## 基础模块	
+## 基础 Starter 模块	
 盘古启动、中心化配置、动态日志等基础能力自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
@@ -61,162 +66,8 @@ implementation 'com.gitee.pulanos.pangu:pangu-spring-boot-starter:${最新稳定
 </TabItem>
 </Tabs>
 
-## Dubbo模块	
-盘古微服务开发自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-dubbo-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-dubbo-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## JDBC模块
-盘古数据库持久化操作自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-jdbc-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## 分布式事务管理模块
-盘古 Seata 分布式事务自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-seata-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## 数据治理模块
-盘古 ShardingSphere 数据治理（如：读写分离、数据分片、数据加密等）自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-data-governance-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-data-governance-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## 缓存模块
-盘古缓存开发自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-cache-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## 消息队列模块
-盘古 RabbitMQ 消息队列开发自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-rabbitmq-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-rabbitmq-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
-## Web模块
-盘古 Web 应用自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-web-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:${最新稳定版本}'
-```
-</TabItem>
-</Tabs>
-
 ## 代码生成插件
-盘古代码生成器 Maven 插件。
+盘古代码生成器 Maven 插件。插件[参数配置](/docs/code-generator)。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
 
