--- a/pangu-website/docs/常见问答.md
+++ b/pangu-website/docs/常见问答.md
@@ -9,7 +9,7 @@ slug: /faq-service
   <title>常见问答 | 盘古 Admin</title>
 </head>
 
-#### 1. 盘古服务开发框架和（Dubbo 生态） [Spring Cloud](https://spring.io/projects/spring-cloud) 或 [Spring Cloud Alibaba](https://spring.io/projects/spring-cloud-alibaba) 是什么关系？ 
+#### 1. 盘古服务开发框架和 [Spring Cloud](https://spring.io/projects/spring-cloud) 或 [Spring Cloud Alibaba](https://spring.io/projects/spring-cloud-alibaba) 是什么关系？ 
 
 没有直接关系。「盘古开发框架」直接基于阿里的 Nacos、Seata、Sentinel 和 Apache 的 Dubbo、ShardingSphere 等分布式中间件输出微服务架构的能力。是一套完全独立于 Spring Cloud 生态的轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架。相较于 SC 和 SCA 而言，简单、纯洁、不被污染和绑架、易扩展好维护是其显著特点。
 
