--- a/pangu-website/docs/advanced-guide/代码生成器插件.md
+++ b/pangu-website/docs/advanced-guide/代码生成器插件.md
@@ -13,8 +13,8 @@ slug: /code-generator
 - MyBatis Plus Mapper.java 映射接口文件
 - MyBatis Plus Entity.java 实体文件
 
-:::caution 建议
-根据实践经验，不建议使用 MyBatis Plus 的生成器，更不建议生成 Mybatis Plus 风格的 Service 文件。
+:::warning 高能告警
+根据实践经验，强烈不建议使用 MyBatis Plus 的生成器，尤其不建议为每张数据表生成一个 Mybatis Plus 风格的 Service 文件、Controller文件。这将导致系统结构的混乱和破坏诸多设计原则。只需使用盘古生成器生成一个和库表对应的实体文件和一个Mapper接口文件即可。切记！
 :::
 
 ## 安装 Maven 插件
