--- a/pangu-website/docs/advanced-guide/数据持久化.md
+++ b/pangu-website/docs/advanced-guide/数据持久化.md
@@ -92,6 +92,10 @@ logging.level.com.gitee.pulanos.pangu.showcases.crud.dao=debug
 ## 生成持久化所需的模版代码
 基于实践经验，我们建议使用盘古代码生成器，而不是使用 Mybatis Plus 官方生成器。关于生成代码相关内容，请参阅 [《代码生成器插件》](/docs/code-generator) 章节，这里不再赘述。（针对每一个数据表会生成一个 `*Mapper.java` 文件和一个 `*Entity.java` 文件）
 
+:::warning 高能告警
+根据实践经验，强烈不建议使用 MyBatis Plus 的生成器，尤其不建议为每张数据表生成一个 Mybatis Plus 风格的 Service 文件、Controller文件。这将导致系统结构的混乱和破坏诸多设计原则。只需使用盘古生成器生成一个和库表对应的实体文件和一个Mapper接口文件即可。切记！
+:::
+
 ## 基本数据持久化操作
  
 > 这里只是给出几个简单典型的操作代码，更多内容请参阅范例或阅读 [Mybatis Plus 官方文档](https://baomidou.com/pages/24112f/)。
